@@ -29,7 +29,7 @@
 
 /* Generated from jedec-raw.txt, copied from
  *
- * Jedec 106 - Standard Manufactuer's Identification Code - JEP106AK - March 2013
+ * Jedec 106 - Standard Manufactuer's Identification Code - JEP106AN - January 2014
  */
 
 const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank1[] =
@@ -65,7 +65,7 @@ const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank1[] 
     { 0x9D, "Lucent (AT&T)" },
     { 0x9E, "Exel" },
     { 0x1F, "Atmel" },
-    { 0x20, "SGS/Thomson" },
+    { 0x20, "STMicroelectronics" },
     { 0xA1, "Lattice Semi." },
     { 0xA2, "NCR" },
     { 0x23, "Wafer Scale Integration" },
@@ -234,8 +234,8 @@ const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank2[] 
     { 0x43, "Suwa Electronics" },
     { 0xC4, "Transmeta" },
     { 0x45, "Micron CMS" },
-    { 0x46, "American Computer & Digital Components Inc" },
-    { 0xC7, "Enhance 3000 Inc" },
+    { 0x46, "American Computer & Digital Components Inc." },
+    { 0xC7, "Enhance 3000 Inc." },
     { 0xC8, "Tower Semiconductor" },
     { 0x49, "CPU Design" },
     { 0x4A, "Price Point" },
@@ -339,7 +339,7 @@ const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank3[] 
     { 0x29, "ADTEC Corporation" },
     { 0x2A, "Kentron Technologies" },
     { 0xAB, "Win Technologies" },
-    { 0x2C, "Tachyon Semiconductor (ASIC)" },
+    { 0x2C, "Tezzaron Semiconductor" },
     { 0xAD, "Extreme Packet Devices" },
     { 0xAE, "RF Micro Devices" },
     { 0x2F, "Siemens AG" },
@@ -587,7 +587,7 @@ const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank5[] 
     { 0x9B, "Phonex Broadband" },
     { 0x1C, "Skyworks Solutions" },
     { 0x9D, "Entropic Communications" },
-    { 0x9E, "Pacific Force Technology" },
+    { 0x9E, "M Intelligent Memory Ltd." },
     { 0x1F, "Zensys A/S" },
     { 0x20, "Legend Silicon Corp." },
     { 0xA1, "Sci-worx GmbH" },
@@ -882,7 +882,7 @@ const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank7[] 
     { 0xBC, "Gingle Technology Co. Ltd." },
     { 0x3D, "Space Micro Inc." },
     { 0x3E, "Wilocity" },
-    { 0xBF, "Novafora, Ic." },
+    { 0xBF, "Novafora, Inc." },
     { 0x40, "iKoa Corporation" },
     { 0xC1, "ASint Technology" },
     { 0xC2, "Ramtron" },
@@ -1064,5 +1064,63 @@ const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank8[] 
     { 0xEF, "Zentel Electronics Corporation" },
     { 0x70, "Panram International Corporation" },
     { 0xF1, "Silicon Space Technology" },
+    { 0xF2, "LITE-ON IT Corporation" },
+    { 0x73, "Inuitive" },
+    { 0xF4, "HMicro" },
+    { 0x75, "BittWare, Inc." },
+    { 0x76, "GLOBALFOUNDRIES" },
+    { 0xF7, "ACPI Digital Co. Ltd." },
+    { 0xF8, "Annapurna Labs" },
+    { 0x79, "AcSiP Technology Corporation" },
+    { 0x7A, "Idea! Electronic Systems" },
+    { 0xFB, "Gowe Technology Co. Ltd." },
+    { 0x7C, "Hermes Testing Solutions, Inc." },
+    { 0xFD, "Positivo BGH" },
+    { 0xFE, "Intelligence Silicon Technology" },
+    { 0x00, NULL },
+  };
+
+const struct ipmi_jedec_manufacturer_id_pair ipmi_jedec_manufacturer_id_bank9[] =
+  {
+    { 0x01, "3D PLUS" },
+    { 0x02, "Diehl Aerospace" },
+    { 0x83, "Fairchild" },
+    { 0x04, "Mercury Systems" },
+    { 0x85, "Sonics, Inc." },
+    { 0x86, "GE Intelligent Platforms GmbH & Co." },
+    { 0x07, "Shenzhen Jinge Information Co. Ltd." },
+    { 0x08, "SCWW" },
+    { 0x89, "Silicon Motion Inc." },
+    { 0x8A, "Anurag" },
+    { 0x0B, "King Kong" },
+    { 0x8C, "FROM30 Co. Ltd." },
+    { 0x0D, "Gowin Semiconductor Corp" },
+    { 0x0E, "Fremont Micro Devices Ltd." },
+    { 0x8F, "Ericsson Modems" },
+    { 0x10, "Exelis" },
+    { 0x91, "Satixfy Ltd." },
+    { 0x92, "Galaxy Microsystems Ltd." },
+    { 0x13, "Gloway International Co. Ltd." },
+    { 0x94, "Lab" },
+    { 0x15, "Smart Energy Instruments" },
+    { 0x16, "Approved Memory Corporation" },
+    { 0x97, "Axell Corporation" },
+    { 0x98, "ISD Technology Limited" },
+    { 0x19, "Phytium" },
+    { 0x1A, "an SinoChip Semiconductor" },
+    { 0x9B, "Ambiq Micro" },
+    { 0x1C, "eveRAM Technology, Inc." },
+    { 0x9D, "Infomax" },
+    { 0x9E, "Butterfly Network, Inc." },
+    { 0x1F, "Shenzhen City Gcai Electronics" },
+    { 0x20, "Stack Devices Corporation" },
+    { 0xA1, "ADK Media Group" },
+    { 0xA2, "TSP Global Co., Ltd." },
+    { 0x23, "HighX" },
+    { 0xA4, "Shenzhen Elicks Technology" },
+    { 0x25, "ISSI/Chingis" },
+    { 0x26, "Google, Inc." },
+    { 0xA7, "Dasima International Development" },
+    { 0xA8, "Leahkinn Technology Limited" },
     { 0x00, NULL },
   };
